k8s/ascsa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ascsa
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: ascsa
  ports:
  - name: 
    port: 80
    targetPort: 80
